<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/offline_card"
        style="@style/card_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/volkhov_bold"
                android:text="@string/date"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/class_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/volkhov_bold"
                android:text="@string/demo_roll"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/date_t"
                app:layout_constraintStart_toEndOf="@+id/date_t"
                app:layout_constraintTop_toTopOf="@+id/date_t" />

            <TextView
                android:id="@+id/time_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/volkhov_bold"
                android:text="@string/time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/date"
                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toTopOf="@+id/date" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/volkhov_bold"
                android:text="@string/demo_roll"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/time_t"
                app:layout_constraintEnd_toStartOf="@+id/comment_card"
                app:layout_constraintStart_toEndOf="@+id/time_t"
                app:layout_constraintTop_toTopOf="@+id/time_t" />

            <TextView
                android:id="@+id/class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:text="@string/name"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_t" />

            <TextView
                android:id="@+id/section_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="2dp"
                android:text="@string/demo_name"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/class_name"
                app:layout_constraintEnd_toStartOf="@+id/comment_card"
                app:layout_constraintStart_toEndOf="@+id/class_name"
                app:layout_constraintTop_toTopOf="@+id/class_name" />

            <TextView
                android:id="@+id/period_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="4dp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/section_t"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/comment_card"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:tooltipText="@string/upload"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/period_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/soft_main">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_round_upload_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/main_color" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>